overflow issue bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,11 @@
   box-sizing: border-box;
 }
 
-#root {
+/* #root {
   width: 100vw;
   height: 100vh;
   overflow: auto;
-}
+} */
 
 @media screen and (max-width: 768px) {
   .card-figure {
